# bitza

./: .gitignore  README.md  bitza_context_restoration.md  bitza_frontend_context.md  bitza_project_context.md  instructions.md
backend/: .env  .env.dev  .env.prod.template  .env.test  .env.uat.template  .gitignore  AI_instructions.md  ARCHITECTURAL_OVERVIEW.md  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  bitza_context_restoration.md  docker-compose.yaml  env.template  instructions.md  pyproject.toml  tree.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_assets.py  0002_bitzas.py
backend/app/: .env.template  alembic.ini  cli.py  here.txt  main.py  test_password_2.py
backend/app/api/v0_1/: users.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: assets.py  audit.py  auth.py  bitzas.py  locations.py  teams.py  users.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logger.py  logging_config.py  security.py
backend/app/data/: bitza_1_dev.db
backend/app/data/old/: bitza_1.db.bak  bitza_1.sql
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 2026_01_28_1719-0b8838420a55_initial_schema.py  2026_02_04_0347-81487167e00c_seed_users.py
backend/app/models/: asset.py  audit.py  base.py  bitza.py  category.py  location.py  old_style_user.py  team.py  token.py  user.py
backend/app/repositories/: asset_repository.py  audit_repository.py  bitza_image_repository.py  bitza_repository.py  category_repository.py  checkout_repository.py  location_repository.py  stock_log_repository.py  team_repository.py  token_repository.py  user_repository.py
backend/app/schemas/: asset.py  audit.py  auth.py  bitza.py  category.py  location.py  team.py  user.py  utilities.py
backend/app/services/: asset_service.py  auth_service.py  bitza_service.py  location_service.py  old_style_user_service.py  team_service.py  user_service.py
backend/old_app/api/v0_1/: __init__.py  auth.py
backend/old_app/core/: config.py
backend/old_app/db/: session.py
backend/old_app/db/migrations/versions/: 2026_02_04_0310-0f3267219977_updated_user.py
backend/old_app/models/: __init__.py  user.py
backend/old_app/services/: auth_service.py
backend/tests/: conftest.py  test_assets.py  test_auth.py  test_bitzas.py  test_cli.py  test_repositories.py  test_teams.py  test_users.py
frontend/bitza/: .gitignore  README.md  angular.json  package-lock.json  package.json
frontend/bitza/.claude/: CLAUDE.md
frontend/bitza/src/: index.html  styles.scss
frontend/bitza/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
frontend/bitza/src/app/shell/: app-shell.ts
(+61 files in other folders)
