[project]
name = "bitzaBackend"
version = "0.1.0"
description = "Backend for storing bitza this and bitza that (electronics components)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic[tz]>=1.17.2",
    "argon2-cffi>=25.1.0",
    "fastapi[all]>=0.128.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
