[project]
name = "bitza"
version = "0.1.10"
description = "Bitza asset management API"
requires-python = ">=3.12"
dependencies = [
    # Core framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",

    # Validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "zxcvbn>=4.4.28",
    "httpx>=0.27.0",

    # Form parsing (required by FastAPI for OAuth2 compatibility)
    "python-multipart>=0.0.9",

    # CLI
    "typer>=0.12.0",
]

[project.optional-dependencies]
# Kept for pip compatibility. Canonical dev deps are in [dependency-groups].
dev = []

[project.scripts]
# Allows: uv run assetmgmt <command>
bitza = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------

[tool.uv]
# Use `uv sync` for production, `uv sync --group dev` for development.

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

# ---------------------------------------------------------------------------
# Ruff (linting / formatting)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
